--- a/src/templates/skills.html
+++ b/src/templates/skills.html
@@ -12,9 +12,9 @@
   </ul>
 </main>
 
-<form>
-  <input type=submit formmethod="GET" name="submit_button" value="Return">
-  <input type=submit formmethod="POST" name="submit_button" value="Find Job Postings">
+<form method="POST">
+  <input type=submit name="submit_button" value="Return">
+  <input type=submit name="submit_button" value="Find Job Postings">
 </form>
 
 {% endblock %}
